--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -26,6 +26,11 @@ body {
 	 height: 10px;
 }
 
+.list-card {
+  min-width: 70vw;
+  max-width: 100vw;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "PT Serif", serif;
 }
